fix: 增加互动事件回执与可靠回放